--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
+    "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "node-localstorage": "^2.2.1",
+    "nodemailer": "^6.9.1",
+    "uuid": "^9.0.0"
   }
 }
